# conda-exec

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  docs.yml  release.yml  tests.yml
conda_exec/: __init__.py  auto_clean.py  binaries.py  cache.py  clean.py  cli.py  config.py  exceptions.py  execute.py  format.py  list.py  lockfile.py  main.py  paths.py  plugin.py  pypi.py  run.py  script.py  specs.py
conda_exec/cli/: __init__.py  clean.py  format.py  list.py  main.py  run.py
demos/: README.md  cache-management.tape  extra-packages.tape  pypi-script.tape  quickstart.tape  script-dependencies.tape  script-lock.tape
docs/: conf.py  index.md  quickstart.md
docs/_static/css/: custom.css
docs/explanation/: architecture.md  caching.md  dependency-resolution.md  ecosystem-fit.md  index.md  prior-art.md  script-locks.md  security.md
docs/how-to/: ci-cd.md  index.md  lock-scripts.md  manage-cache.md  migrate-from-classic-conda-exec.md  run-scripts.md  run-tools.md  troubleshooting.md  upgrade-from-conda-forge-021.md  use-activation.md  use-channels.md  use-pypi-dependencies.md  version-constraints.md
docs/reference/: cache-layout.md  cli.md  environment-variables.md  errors.md  index.md  package-specs.md  script-metadata.md
docs/tutorials/: first-run.md  index.md  run-script.md  share-locked-script.md
tests/: conftest.py  test_auto_clean.py  test_benchmarks.py  test_binaries.py  test_cache.py  test_clean.py  test_cli.py  test_config.py  test_exceptions.py  test_integration.py  test_list.py  test_lockfile.py  test_main.py  test_paths.py  test_plugin.py  test_run.py  test_script.py  test_specs.py
tests/cli/: conftest.py  test_clean.py  test_list.py  test_main.py
