[build-system]
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.2.0"]
build-backend = "hatchling.build"

[project]
name = "conda-exec"
description = "Ephemeral package execution for conda -- run any conda package without installing it"
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Jannis Leidel", email = "jannis@leidel.info" }]
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  # conda is required but only available via conda, not PyPI:
  # "conda >=25.1",
  "packaging >=22.0",
  "tomli >=1.0; python_version < '3.11'",
]
dynamic = ["version"]

[project.urls]
documentation = "https://jezdez.github.io/conda-exec"
repository = "https://github.com/jezdez/conda-exec"

[project.scripts]
ce = "conda_exec.main:main"

[project.entry-points.conda]
"conda-exec" = "conda_exec.plugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_exec/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["conda_exec"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
omit = ["conda_exec/_version.py"]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.coverage.run]
source = ["conda_exec"]
branch = true

[tool.ruff]
target-version = "py310"
exclude = ["conda_exec/_version.py"]

[tool.ruff.lint]
flake8-type-checking.exempt-modules = []
flake8-type-checking.strict = true
select = [
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "I",      # isort
  "ISC",    # flake8-implicit-str-concat
  "PT",     # flake8-pytest-style
  "RUF100", # unused noqa directive
  "S603",   # subprocess call with shell=True
  "S607",   # start process with a partial executable path
  "T10",    # flake8-debugger
  "TCH",    # flake8-type-checking
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v -m 'not slow and not benchmark'"
markers = [
  "slow: integration tests that require network and a solver",
  "benchmark: performance benchmarks (run with pytest-benchmark)",
]

[tool.ty.environment]
python-version = "3.10"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=25.1"
conda-rattler-solver = ">=0.0.6"
conda-lockfiles = ">=0.2.0"

[tool.pixi.pypi-dependencies]
conda-exec = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.9"
ty = ">=0.0.1a7"
pre-commit = ">=4.0"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.0"
pytest-benchmark = ">=5.0"
pytest-cov = ">=4.0"
pytest-subprocess = ">=1.5"
time-machine = ">=2.0"
conda-pypi = ">=0.9"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=7.0"
conda-sphinx-theme = ">=0.2"
myst-parser = ">=3.0"
sphinx-design = ">=0.6"
sphinx-copybutton = ">=0.5"
sphinx-sitemap = ">=2.5"
sphinxcontrib-mermaid = ">=2.0"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]
lint = { cmd = "ruff check conda_exec tests", description = "Check code style" }
format = { cmd = "ruff format conda_exec tests", description = "Auto-format code" }
format-check = { cmd = "ruff format --check conda_exec tests", description = "Verify formatting" }
typecheck = { cmd = "ty check conda_exec", description = "Run type checker" }

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest", description = "Run test suite" }
test-cov = { cmd = "pytest --cov --cov-report=term-missing --cov-report=html --cov-report=xml", description = "Tests with coverage" }
test-integration = { cmd = "pytest -m slow -v", description = "Run integration tests (requires network)" }
bench = { cmd = "pytest -m benchmark --benchmark-json benchmark-results.json -v", description = "Run benchmarks" }

[tool.pixi.tasks.check]
depends-on = ["lint", "format-check", "typecheck"]
description = "Run all checks"

[tool.pixi.tasks.demos]
cmd = """bash -c 'if [ -n "$1" ]; then vhs "demos/$1.tape"; else for tape in demos/*.tape; do [[ "$(basename "$tape")" == _* ]] && continue; vhs "$tape"; done; fi' -- {{ name }}"""
args = [{ arg = "name", default = "" }]
description = "Record demo GIFs"
